--- a/client/src/style/Publish/Publish.module.css
+++ b/client/src/style/Publish/Publish.module.css
@@ -5,4 +5,6 @@
 
 .container {
     background: #263238;
+    height: 100vh;
+    width: 100vw;
 }
